--- a/index.html
+++ b/index.html
@@ -96,37 +96,37 @@
         <div class="blogcard">
           <img src="assets/img/blog1.webp" alt="Blog 1">
           <h3>Smart Tools, Dumb Mistakes</h3>
-          <p>A tale of “Garbage Code and Silent Bugs🐛”</p>
+          <p>Rise of Garbage Code and Silent Bugs</p>
         </div>
 
         <div class="blogcard">
           <img src="assets/img/blog2.webp" alt="Blog 2">
-          <h3>“Workflows” to “Smart Minds”</h3>
-          <p>How we moved from “Auto Scripts” to “Self-Reasoning"</p>
+          <h3>Workflows to Smart Minds</h3>
+          <p>How Self-Learning replaced AutoScripts</p>
         </div>
 
         <div class="blogcard">
           <img src="assets/img/blog3.webp" alt="Blog 3">
-          <h3>Even Great Models Fail</h3>
+          <h3>Even Greatest Models Fail</h3>
           <p>The “Hidden Cost” of Bad Context</p>
        </div>
          
         <div class="blogcard">
           <img src="assets/img/blog4.png" alt="Blog 4">
-          <h3>DevRe - DevOps - DevExp</h3>
-          <p>How they fit in Modern Dev Platform teams</p>
+          <h3>DevRel - DevOps - DevExp</h3>
+          <p>In Modern Developer Platform teams</p>
         </div>
 
        <div class="blogcard">
           <img src="assets/img/blog5.png" alt="Blog 5">
           <h3>Doc-as-Code to Product</h3>
-          <p>Why Docs need the same Empathy as a Feature!</p>
+          <p>Docs need the same Empathy as a Feature!</p>
         </div>
      
         <div class="blogcard">
           <img src="assets/img/blog6.png" alt="Blog 6">
-          <h3>Embracing the “Vibe”</h3>
-          <p>Knowing how to guide AI tools intelligently.</p>
+          <h3>How to Embrace the “Vibe”</h3>
+          <p>Learn to guide AI tools intelligently</p>
         </div>
 
       </div>
@@ -145,7 +145,7 @@
         </div>
 
         <div class="writingcard">
-          <h3>From “Automation” to "Agentic AI"</h3>
+          <h3>From “Automation” to "GenAI" to "Agentic AI"</h3>
           <p>A white paper, with a complete technical deep-dive into the evolution of Agentic AI</p>
         </div>
 
