--- a/index.html
+++ b/index.html
@@ -134,17 +134,31 @@
   <div class="writingcards">
 
         <div class="writingcard">
-          <h3>AI Pipeline for Technical Documentation</h3>
+          <h3>
+            <a href="https://github.com/PrineetKaur/AI-Pipeline-for-Technical-Documentation" target="_blank">
+            AI Pipeline for Technical Documentation
+            </a>
+          </h3>
           <p>End-to-end doc system automating content creation, doc updation, and publishing workflow.</p>
         </div>
 
+    
+
         <div class="writingcard">
-          <h3>From “Automation” to "GenAI" to "Agentic AI"</h3>
+          <h3>
+            <a href="https://github.com/PrineetKaur/From-Automation-to-Agentic-AI" target="_blank">
+            From “Automation” to "GenAI" to "Agentic AI"
+            </a>
+          </h3>
           <p>A white paper, with a complete technical deep-dive into the evolution of Agentic AI</p>
         </div>
 
         <div class="writingcard">
-          <h3>Developer Technical Documentation Portal</h3>
+          <h3>
+            <a href="https://github.com/PrineetKaur/Developer-Technical-Documentation-Portal" target="_blank">
+            Developer Technical Documentation Portal
+            </a>
+          </h3>
           <p>Demo portal built using a Docs-as-Code approach and to showcase Tech Doc Best Practices</p>
        </div>
         
