--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <a href="https://medium.com/@bhurji.pk" target="https://medium.com/@bhurji.pk">
         <img src="assets/icons/medium.png" alt="Medium">
       </a>
-      <a href="https://www.instagram.com/prineet.kaur/" target="https://www.instagram.com/prineet.kaur/">
-        <img src="assets/icons/instagram.png" alt="Instagram">
+      <a href="https://www.duolingo.com/profile/PrineetKaur" target="https://www.duolingo.com/profile/PrineetKaur">
+        <img src="assets/icons/duolingo.png" alt="Duolingo">
       </a>
       
     </div>
