--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <!-- TECH PROJECTS -->
     <section id="project" class="section">
-      <h2 class="section-title">Tech Projects</h2>
+      <h2 class="section-title">Data Projects</h2>
 
       <div class="projectcards">
 
