--- a/index.html
+++ b/index.html
@@ -166,16 +166,16 @@
             Platform.sh (now Upsun) Documentation
             </a>
           </h3>
-          <p>As a Technical Product Manager, I wrote and ensured the timely updates of the Observability segment docs</p>
+          <p>As a Technical PM, I wrote and ensured the timely updates of the Observability segment docs</p>
        </div>
 
         <div class="writingcard">
           <h3>
             <a href="https://docs.dataplatform.ovh.net/#/en/product/am/index" target="_blank">
-            ForePaaS (now OVH DataCloud) Developer Documentation
+            ForePaaS (now OVH Data Cloud) Dev Documentation
             </a>
           </h3>
-          <p>As a Product Manager, I built from scratch the technical documentation for Analytics Manager</p>
+          <p>As a PM, I built from scratch the technical documentation for Analytics Manager</p>
        </div>
     
         <div class="writingcard">
@@ -199,7 +199,7 @@
         <div class="writingcard">
           <h3>
             <a href="https://devcenter.upsun.com/posts/infrastructure-metrics-expanded-to-longer-time-frames/" target="_blank">
-            Logs Forwarding to 3rd-party API endpoints
+            Infrastructure Metrics longer timeframes
             </a>
           </h3>
           <p>Technical blog on longer timeframes for Infrastructure Monitoring metrics</p>
@@ -208,18 +208,11 @@
         <div class="writingcard">
           <h3>
             <a href="https://www.linkedin.com/pulse/data-science-netflix-more-than-just-recommendation-system-kaur/?trackingId=Cfj4JDjvQK%2BBWZP6IuhUHw%3D%3D" target="_blank">
-            Data Science at Netflix
+            How Netflix nails Data Science
             </a>
           </h3>
           <p>Technical deep dive into their core recommendation system and use of data analytics</p>
        </div>
-
-
-
-   
-
-
-    
 
       </div>
     </section>
