--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="writingcard">
           <h3>
             <a href="https://devcenter.upsun.com/posts/infrastructure-metrics-expanded-to-longer-time-frames/" target="_blank">
-            Infrastructure Metrics longer timeframes
+            Infrastructure Metrics: Longer timeframes
             </a>
           </h3>
           <p>Technical blog on longer timeframes for Infrastructure Monitoring metrics</p>
@@ -221,7 +221,7 @@
 
     <!-- DATA PROJECTS -->
     <section id="project" class="section">
-      <h2 class="section-title">Data Projects</h2>
+      <h2 class="section-title">Data Science Projects</h2>
 
       <div class="projectcards">
 
@@ -248,6 +248,19 @@
         <div class="projectcard">
           <img src="assets/img/project6.png" alt="Project 6">
         </div>
+
+        <div class="projectcard">
+          <img src="assets/img/project7.png" alt="Project 7">
+        </div>
+
+        <div class="projectcard">
+          <img src="assets/img/project8.png" alt="Project 8">
+        </div>
+
+        <div class="projectcard">
+          <img src="assets/img/project9.png" alt="Project 9">
+        </div>
+      
       </div>
     </section>
 
