--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="heading quote">
       <h3>
-      “I make it easier to build, ship, understand, and adopt technical products”
+      “I make it easier to Build, Ship, Understand, and Adopt Technical Products”
       </h3>  
     </div>
 
