--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             AI Pipeline for Technical Documentation
             </a>
           </h3>
-          <p>End-to-end doc system automating content creation, doc updation, and publishing workflow.</p>
+          <p>End-to-end system automating content creation, updation, and publishing workflow.</p>
         </div>
 
         <div class="writingcard">
@@ -181,34 +181,34 @@
             Developer Technical Documentation Portal
             </a>
           </h3>
-          <p>Demo portal built using a Docs-as-Code approach and to showcase Tech Doc Best Practices</p>
+          <p>Demo built using a Docs-as-Code approach to showcase Tech Doc Best Practices</p>
        </div>
 
         <div class="writingcard">
           <h3>
             <a href="https://docs.upsun.com/increase-observability.html" target="_blank">
-            Platform.sh (now Upsun) Documentation
+            Platform.sh (now Upsun) Dev Documentation
             </a>
           </h3>
-          <p>As a Technical PM, I wrote and ensured the timely updates of the Observability segment docs</p>
+          <p>As Tech Product Manager, I wrote and ensured timely updates for Observability segment docs</p>
        </div>
 
         <div class="writingcard">
           <h3>
             <a href="https://docs.dataplatform.ovh.net/#/en/product/am/index" target="_blank">
-            ForePaaS (now OVH Data Cloud) Dev Documentation
+            ForePaaS (now OVH Data Cloud) Documentation
             </a>
           </h3>
-          <p>As a PM, I built from scratch the technical documentation for Analytics Manager</p>
+          <p>As Product Manager, I built from scratch the technical documentation for Analytics Manager</p>
        </div>
     
         <div class="writingcard">
           <h3>
             <a href="https://www.saregama.com/carvaan/all-products" target="_blank">
-            Saregama India Product Documentation
+            Saregama Product Documentation (Global)
             </a>
           </h3>
-          <p>As a Website Manager, I wrote and maintained the documentation for the entire product stack</p>
+          <p>As Website Manager, I maintained the documentation for the entire product stack</p>
        </div>
 
         <div class="writingcard">
