--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             Platform.sh (now Upsun) Dev Documentation
             </a>
           </h3>
-          <p>As Tech Product Manager, I wrote and ensured timely updates for Observability segment docs</p>
+          <p>As Tech Product Manager, I led end-to-end management of Observability docs</p>
        </div>
 
         <div class="writingcard">
@@ -199,7 +199,7 @@
             ForePaaS (now OVH Data Cloud) Documentation
             </a>
           </h3>
-          <p>As Product Manager, I built from scratch the technical documentation for Analytics Manager</p>
+          <p>As Product Manager, I built from scratch the technical docs for Analytics Manager</p>
        </div>
     
         <div class="writingcard">
