--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             Infrastructure Metrics: Longer timeframes
             </a>
           </h3>
-          <p>Technical blog on longer timeframes for Infrastructure Monitoring metrics</p>
+          <p>Technical blog on longer timeframes for Infrastructure Monitoring metrics feature</p>
        </div>
 
         <div class="writingcard">
