--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         Or we can always book a ☕️ session <br><br>
       </p>
 
-      <a href="mailto:bhurji.pk@gmail.com" class="btn">Let's connect</a>
+      <a href="https://calendly.com/bhurji-pk/coffee-chat" class="btn">Let's connect</a>
     </div>
 
   </div>
