--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       “I make it easier to Build, Ship, Understand, and Adopt Technical Products”
       </h3>  
     </div>
-
+<!--
     <nav class="nav">
       <a href="#home" class="nav-link"><img class="icon" src="assets/icons/home.png" alt="Home"> Home</a>
       <a href="#about" class="nav-link"><img class="icon" src="assets/icons/about.png" alt="About"> About</a>
@@ -54,6 +54,35 @@
       <a href="#project" class="nav-link"><img class="icon" src="assets/icons/projects.png" alt="Projects"> Projects</a>
       <a href="#contact" class="nav-link"><img class="icon" src="assets/icons/contact.png" alt="Contact"> Contact</a>
     </nav>
+
+-->
+
+      <nav class="nav">
+        <a href="#home" class="nav-link" data-target="home">
+        <img class="icon" src="assets/icons/home.png" alt="Home"> Home
+      </a>
+
+      <a href="#about" class="nav-link" data-target="about">
+        <img class="icon" src="assets/icons/about.png" alt="About"> About
+      </a>
+
+      <a href="#blog" class="nav-link" data-target="blog">
+        <img class="icon" src="assets/icons/blogs.png" alt="Blogs"> Blogs
+      </a>
+
+      <a href="#writing" class="nav-link" data-target="writing">
+        <img class="icon" src="assets/icons/resume.png" alt="Docs as Code"> Writing
+      </a>
+
+      <a href="#project" class="nav-link" data-target="project">
+        <img class="icon" src="assets/icons/projects.png" alt="Projects"> Projects
+      </a>
+
+      <a href="#contact" class="nav-link" data-target="contact">
+        <img class="icon" src="assets/icons/contact.png" alt="Contact"> Contact
+      </a>
+      </nav>
+
     
     <div class="sidebar-footer">
       <small>© 2025 Prineet Kaur</small>
@@ -306,17 +335,17 @@
     </section>
 
 
-<!-- CONTACT SECTION -->
-<section id="contact" class="section contact-section">
-  <h2 class="section-title">
-    <span class="section-title-icon"> </span> Contact
-  </h2>
+  <!-- CONTACT SECTION -->
+    <section id="contact" class="section contact-section">
+      <h2 class="section-title">
+        <span class="section-title-icon"> </span> Contact
+      </h2>
 
-  <div class="contact-wrapper" style="
-      display: flex;
-      gap: 40px;
-      align-items: stretch;
-  ">
+    <div class="contact-wrapper" style="
+        display: flex;
+        gap: 40px;
+        align-items: stretch;
+      ">
 
     <!-- LEFT -->
     <div class="contact-left box" style="flex:1;">
