--- a/index.html
+++ b/index.html
@@ -401,12 +401,10 @@
 
 </section>
 
-<!--
-    <footer class="site-footer">
-      <p> © 2025 Prineet Kaur. All Rights Reserved.</p>
-    </footer>
+        <footer class="site-footer">
+<!-- <p> © 2025 Prineet Kaur. All Rights Reserved.</p>  -->
+        </footer>
 
--->
 
   </main>
 
