--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <!-- LEFT -->
     <div class="contact-left box" style="flex:1;">
       
-      <div class="info-item" style="margin-bottom: 25px;">
+      <div class="info-item" style="margin-bottom: 15px;">
         <!-- Wrapper for the icon and heading + text -->
         <div class="info-header">
           <img src="assets/icons/location.png" alt="Location" class="contact-icon">
@@ -361,7 +361,7 @@
         </div>
       </div>
 
-    <div class="info-item" style="margin-bottom: 25px;">
+    <div class="info-item" style="margin-bottom: 15px;">
       <!-- Wrapper for the icon and heading + text -->
       <div class="info-header">
       <img src="assets/icons/gmail.png" alt="Email" class="contact-icon">
@@ -401,9 +401,9 @@
 
 </section>
 
-        <footer class="site-footer">
-<!-- <p> © 2025 Prineet Kaur. All Rights Reserved.</p>  -->
-        </footer>
+   <footer class="site-footer">
+      <p> © 2025 Prineet Kaur. All Rights Reserved.</p> 
+  </footer>
 
 
   </main>
