--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
     </div>
           
   <iframe 
-        style="width:100%;height:260px;border:0;border-radius:10px;margin-top:40px;"
+        style="width:100%;height:260px;border:0;border-radius:10px;margin-top:10px;"
         src="https://www.google.com/maps/embed/v1/place?q=Paris,+France&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
       </iframe>
     </div>
@@ -387,10 +387,10 @@
         flex-direction:column;
         justify-content:center;
     ">
-      <h3 style="color: var(--grey-label); margin-bottom:20px;">Get in Touch</h3>
+      <h3 style="color: var(--grey-label); margin-bottom:15px;">Get in Touch</h3>
 
-      <p style="line-height: 26px; margin-bottom: 25px;">
-        I love to talk about the latest technologies and AI's impact on the developer product space. 
+      <p style="line-height: 26px; margin-bottom: 20px;">
+        I love to talk about the latest technologies and AI's impact on the developer product space. <br><br>
         So if you are inclined towards any such topics, shoot a question, and I will get back within a week <br><br>
         Or we can always book a ☕️ session <br><br>
       </p>
