--- a/index.html
+++ b/index.html
@@ -100,19 +100,18 @@
     <section id="about" class="section">
       <h2 class="section-title">About Me</h2>
       <p>
-
-I’m a technology professional with a decade of experience operating where engineering, product strategy, and clear communication meet. I specialize in turning complex technical concepts into solutions, content, and programs that bring clarity, alignment, and real impact.
-<br><br>
-My work spans the full lifecycle of building and delivering technology — from defining technical requirements and coordinating cross-functional teams, to creating documentation, developer guides, and knowledge resources that help people understand and use complex systems. In fast-paced environments, I’ve partnered closely with Platform Engineering, DevOps, and SRE teams to drive initiatives in areas like Observability, system performance, and reliability. Whether collaborating on architecture discussions or enabling adoption post-launch, I’m consistently focused on making the technical accessible and the abstract actionable.
-<br><br>
-With a foundation in Computer Science Engineering supported by an MBA and an MSc in AI & Data Analytics, I bring a blend of technical fluency, strategic thinking, and communication depth. This allows me to move fluidly between technical deep dives, cross-team coordination, content creation, and stakeholder alignment — adapting to what a project or audience needs most.
-<br><br>
-Beyond my core work, I maintain a growing portfolio on Medium and GitHub, where I combine storytelling, experimentation, and hands-on exploration to distill complex ideas. I enjoy contributing to open communities, sharing what I learn, and engaging in discussions that push technology — and people — forward.
-<br><br>
-At the heart of everything I do, is a simple approach:
-<br>  "Enable understanding, reduce complexity, and help teams and users connect more deeply with the technology they rely on."
-
-        
+        I’m a technology professional with a decade of experience operating where engineering, product strategy, and clear communication meet. I specialize in turning complex technical concepts into solutions, content, and programs that bring clarity, alignment, and real impact.
+        <br><br>
+        At the heart of everything I do, is a simple approach:       
+      </p>
+        <br> <h3> "Enable understanding, reduce complexity, and help teams and users connect more deeply with the technology they rely on." </h3>
+        <br><br>
+      <p>     
+        My work spans the full lifecycle of building and delivering technology — from defining technical requirements and coordinating cross-functional teams, to creating documentation, developer guides, and knowledge resources that help people understand and use complex systems. In fast-paced environments, I’ve partnered closely with Platform Engineering, DevOps, and SRE teams to drive initiatives in areas like Observability, system performance, and reliability. Whether collaborating on architecture discussions or enabling adoption post-launch, I’m consistently focused on making the technical accessible and the abstract actionable.
+        <br><br>
+        With a foundation in Computer Science Engineering supported by an MBA and an MSc in AI & Data Analytics, I bring a blend of technical fluency, strategic thinking, and communication depth. This allows me to move fluidly between technical deep dives, cross-team coordination, content creation, and stakeholder alignment — adapting to what a project or audience needs most.
+        <br><br>
+        Beyond my core work, I maintain a growing portfolio on Medium and GitHub, where I combine storytelling, experimentation, and hands-on exploration to distill complex ideas. I enjoy contributing to open communities, sharing what I learn, and engaging in discussions that push technology — and people — forward.        
       </p>
     </section>    
 
