--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <p>
         I’m a technology professional with a decade of experience operating where engineering, product strategy, and clear communication meet. I specialize in turning complex technical concepts into solutions, content, and programs that bring clarity, alignment, and real impact.
         <br><br>
-        At the heart of everything I do, is a simple approach:       
+        At the heart of everything I do is a simple approach:       
       </p>
         <br> <h3> "Enable understanding, reduce complexity, and help teams and users connect more deeply with the technology they rely on." </h3>
         <br><br>
