--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
         <br><br>
         At the heart of everything I do is a simple approach:       
       </p>
-        <br> <h3> "Enable understanding, reduce complexity, and help teams and users connect more deeply with the technology they rely on." </h3>
-        <br><br>
+      <h3> "Enable understanding, reduce complexity, and help teams and users connect more deeply with the technology they rely on." </h3>
       <p>     
         My work spans the full lifecycle of building and delivering technology — from defining technical requirements and coordinating cross-functional teams, to creating documentation, developer guides, and knowledge resources that help people understand and use complex systems. In fast-paced environments, I’ve partnered closely with Platform Engineering, DevOps, and SRE teams to drive initiatives in areas like Observability, system performance, and reliability. Whether collaborating on architecture discussions or enabling adoption post-launch, I’m consistently focused on making the technical accessible and the abstract actionable.
         <br><br>
