Change margin-bottom for info items to 0
Updated margin-bottom style for info items in contact section.

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <!-- LEFT -->
     <div class="contact-left box" style="flex:1;">
       
-      <div class="info-item" style="margin-bottom: 10px;">
+      <div class="info-item" style="margin-bottom: 0;">
         <!-- Wrapper for the icon and heading + text -->
         <div class="info-header">
           <img src="assets/icons/location.png" alt="Location" class="contact-icon">
@@ -365,7 +365,7 @@
         </div>
       </div>
 
-    <div class="info-item" style="margin-bottom: 10px;">
+    <div class="info-item" style="margin-bottom: 0;">
       <!-- Wrapper for the icon and heading + text -->
       <div class="info-header">
       <img src="assets/icons/gmail.png" alt="Email" class="contact-icon">
