Adjust margin styles and refine contact text
Updated margin styles and improved text clarity.

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <!-- LEFT -->
     <div class="contact-left box" style="flex:1;">
       
-      <div class="info-item" style="margin-bottom: 0;">
+      <div class="info-item" style="margin-bottom: 10px;">
         <!-- Wrapper for the icon and heading + text -->
         <div class="info-header">
           <img src="assets/icons/location.png" alt="Location" class="contact-icon">
@@ -365,7 +365,7 @@
         </div>
       </div>
 
-    <div class="info-item" style="margin-bottom: 0;">
+    <div class="info-item" style="margin-bottom: 10px;">
       <!-- Wrapper for the icon and heading + text -->
       <div class="info-header">
       <img src="assets/icons/gmail.png" alt="Email" class="contact-icon">
@@ -394,8 +394,8 @@
       <h3 style="color: var(--grey-label); margin-bottom:15px;">Get in Touch</h3>
 
       <p style="line-height: 26px; margin-bottom: 20px;">
-        I love to talk about the latest technologies and AI's impact on the developer product space. <br><br>
-        So if you are inclined towards any such topics, shoot a question, and I will get back within a week <br><br>
+        I love to talk about the latest technologies and AI's impact on the dev product space. <br><br>
+        So if you are inclined towards any such topics, shoot a question, and I will get back to you within a week <br><br>
         Or we can always book a ☕️ session <br><br>
       </p>
 
