Replace Duolingo link with Substack link

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <a href="https://medium.com/@bhurji.pk" target="https://medium.com/@bhurji.pk">
         <img src="assets/icons/medium.png" alt="Medium">
       </a>
-      <a href="https://www.duolingo.com/profile/PrineetKaur" target="https://www.duolingo.com/profile/PrineetKaur">
-        <img src="assets/icons/duolingo.png" alt="Duolingo">
+      <a href="https://substack.com/@prineetkaur" target="https://substack.com/@prineetkaur">
+        <img src="assets/icons/substack.png" alt="Substack">
       </a>
       
     </div>
