Update blog link and image format in index.html

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         </div>
 
        <div class="blogcard">
-         <a href="https://medium.com/design-bootcamp/docs-as-code-got-us-here-but-docs-as-product-will-take-us-further-22e9f340cb3e">
-          <img src="assets/img/blog5.png" alt="Blog 5">
+         <a href="https://medium.com/design-bootcamp/the-death-of-static-docs-why-developer-documentation-must-become-alive-ad8f1636b334">
+          <img src="assets/img/blog5.webp" alt="Blog 5">
         </a>
         </div>
      
