Update hero section and blog link in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h1><span class="accent">Prineet Kaur</span></h1>
         <h2>
           I'm 
-          <span class="typed" data-typed-items=" a Technical Product Communicator, an Experienced Program Manager, a Developer Advocate"></span>
+          <span class="typed" data-typed-items=" a Technical Product Manager, an Experienced Program Leader, a Developer Advocate, a Technical Wordsmith"></span>
         </h2>
         <div class="hero-ctas">
           <a href="#blog" class="btn">My Tech Log</a>
@@ -145,8 +145,8 @@
        </div>
          
         <div class="blogcard">
-          <a href="https://medium.com/activated-thinker/from-devrel-to-devops-to-devex-building-efficient-feedback-engines-for-dev-focused-platforms-23ae59f12f92">
-          <img src="assets/img/blog4.png" alt="Blog 4">
+          <a href="https://medium.com/write-a-catalyst/from-automation-to-dehumanization-have-we-crossed-lines-with-the-ai-advancements-cd8beff1d174">
+          <img src="assets/img/blog4.webp" alt="Blog 4">
           </a>
         </div>
 
