Revise content in About Me section
Updated the 'About Me' section to reflect recent experiences and insights.

--- a/index.html
+++ b/index.html
@@ -100,24 +100,32 @@
     <section id="about" class="section">
       <h2 class="section-title">About Me</h2>
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">
-        I’m a technology professional with a decade of experience operating where engineering, product strategy, and clear communication meet. I specialize in turning complex technical concepts into solutions, content, and programs that bring clarity, alignment, and real impact.
+        I’ve spent the last nine years building at the crossroads of product, engineering, and data — usually in places where the roadmap is ambitious, the problems are messy, and the pace is fast (just how I like it).
         <br><br>
-        At the heart of everything I do is a simple approach:       
+        What drives me?       
       </p>
       
-        <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
-         "Enable understanding, reduce complexity, and help teams and users connect more deeply with the technology they rely on." 
-        </h3>
+      <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
+        “Turning technical chaos into clear, scalable products.”
+         <br><br>
+        “Helping brilliant teams ship things they’re genuinely proud of.”
+      </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
-        My work spans the full lifecycle of building and delivering technology — from defining technical requirements and coordinating cross-functional teams, to creating documentation, developer guides, and knowledge resources that help people understand and use complex systems. 
+        I’ve spent most of my career managing technical products and leading complex technical programs for deeply technical end users — developers, DevOps engineers, SREs, and data teams. My work has revolved around developer-focused products (Developer Experience, Infrastructure, Platform capabilities) and data platforms (Data Science, Engineering, Analytics).
         <br><br>
-        In fast-paced environments, I’ve partnered closely with Platform Engineering, DevOps, and SRE teams to drive initiatives in areas like Observability, system performance, and reliability. Whether collaborating on architecture discussions or enabling adoption post-launch, I’m consistently focused on making the technical accessible and the abstract actionable.
+        Along the way, I’ve collaborated closely with Platform Engineering, system designers, API/MCP architects, and modern DevOps practitioners — the people building the backbone of today’s technology. These are the spaces where I’m happiest: where systems meet strategy, and where a well-placed decision can change how hundreds of engineers build.
         <br><br>
-        With a foundation in Computer Science Engineering supported by an MBA and an MSc in AI & Data Analytics, I bring a blend of technical fluency, strategic thinking, and communication depth. This allows me to move fluidly between technical deep dives, cross-team coordination, content creation, and stakeholder alignment — adapting to what a project or audience needs most.
+        Somewhere between all of that, I also developed a soft spot for technical storytelling — writing docs, breaking down architecture, or explaining tricky concepts in a way that lands. 
         <br><br>
-        Beyond my core work, I maintain a growing portfolio on Medium and GitHub, where I combine storytelling, experimentation, and hands-on exploration to distill complex ideas. I enjoy contributing to open communities, sharing what I learn, and engaging in discussions that push technology — and people — forward.        
+        Outside of work, I write on Medium and tinker with ideas on GitHub — a mix of storytelling, hands-on experiments, and topics that spark my curiosity. Sharing what I learn has always been a natural part of how I grow.
+        <br><br>
+        My philosophy is simple:
       </p>
+
+      <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
+       Build smart. Deliver well. Stay curious. And make technology actually enjoyable.
+      </h3>
     </section>    
 
     <!-- TECH BLOGS -->
