Refine text and punctuation in index.html

--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
         I’ve spent most of my career managing technical products and leading complex technical programs for deeply technical end users — developers, DevOps engineers, SREs, and data teams. My work has revolved around developer-focused products (Developer Experience, Infrastructure, Platform capabilities) and data platforms (Data Science, Engineering, Analytics).
         <br><br>
-        Along the way, I’ve collaborated closely with Platform Engineering, system designers, API/MCP architects, and modern DevOps practitioners — the people building the backbone of today’s technology. These are the spaces where I’m happiest: where systems meet strategy, and where a well-placed decision can change how hundreds of engineers build.
+        Along the way, I’ve collaborated closely with Platform Engineering, system designers, API/MCP architects, and modern DevOps practitioners. These are the spaces where I’m happiest: where systems meet strategy, and where a well-placed decision can change how hundreds of engineers build.
         <br><br>
-        Somewhere between all of that, I also developed a soft spot for technical storytelling — writing docs, breaking down architecture, or explaining tricky concepts in a way that lands. 
+        Somewhere between all of that, I also developed a soft spot for technical storytelling (writing technical blogs/guides, breaking down system architecture, or explaining tricky concepts in a way that lands). 
         <br><br>
-        Outside of work, I write on Medium and tinker with ideas on GitHub — a mix of storytelling, hands-on experiments, and topics that spark my curiosity. Sharing what I learn has always been a natural part of how I grow.
+        Outside of work, I write on Medium and tinker with ideas on GitHub (a mix of storytelling and hands-on experiments). Sharing what I learn has always been a natural part of how I grow.
         <br><br>
         My philosophy is simple:
       </p>
 
       <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
-       Build smart. Deliver well. Stay curious. Make Technology Understandable.
+       Build smart, Deliver well, Stay curious, and Make Technology Understandable.
       </h3>
     </section>    
 
