Revise 'About Me' section for improved clarity
Rephrased sentences for clarity and conciseness in the 'About Me' section.

--- a/index.html
+++ b/index.html
@@ -100,15 +100,13 @@
     <section id="about" class="section">
       <h2 class="section-title">About Me</h2>
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">
-        I’ve spent the last nine years building at the crossroads of product, engineering, and data — usually in places where the roadmap is ambitious, the problems are messy, and the pace is fast.
+        I’ve spent the last nine years building at the crossroads of product, engineering, and data (mainly in teams where the roadmap is ambitious, the problems are messy, and the pace is fast).
         <br><br>
         What drives me?       
       </p>
       
       <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
-        “Turning technical chaos into clear, scalable products.”
-         <br>
-        “Helping brilliant teams ship things they’re genuinely proud of.”
+        “Turning technical chaos into clear, scalable products”, and “Helping brilliant teams ship things they’re genuinely proud of.”
       </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
