--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h1><span class="accent">Prineet Kaur</span></h1>
         <h2>
           I'm 
-          <span class="typed" data-typed-items=" a Technical Product Manager, an Experienced Program Leader, a Developer Advocate, a Passionate Tech Writer"></span>
+          <span class="typed" data-typed-items=" a Technical Product Manager, an Experienced Program Leader, a Developer Advocate, a Technical Wordsmith"></span>
         </h2>
         <div class="hero-ctas">
           <a href="#blog" class="btn">My Tech Log</a>
