--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section id="about" class="section">
       <h2 class="section-title">About Me</h2>
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">
-        I’ve spent the last nine years building at the crossroads of product, engineering, and data (mainly in teams where the roadmap is ambitious, the problems are messy, and the pace is fast).
+        I come with a decade's experience of innovating and building at the crossroads of product, engineering, and data (leading ambitious roadmaps, and untangling unstructured territoires within fast-paced scale-ups).
         <br><br>
         What drives me?       
       </p>
@@ -110,9 +110,9 @@
       </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
-        I’ve spent most of my career managing technical products and leading complex technical programs for deeply technical end users — developers, DevOps engineers, SREs, and data teams. My work has revolved around developer-focused products (Developer Experience, Infrastructure, Platform capabilities) and data platforms (Data Science, Engineering, Analytics).
+        My career so far has been a blend of managing innovative technology products and leading complex technical programs. And lately, my work has revolved around building developer-focused products (Developer Experience, Infrastructure, Platform Capabilities) and data platforms (Data Science, Engineering, Analytics).
         <br><br>
-        Along the way, I’ve collaborated closely with Platform Engineering, system designers, API/MCP architects, and modern DevOps practitioners. Spaces I’m the happiest: "Where systems meet strategy, and where a well-placed decision can change how hundreds of engineers build".
+        Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. These are also the Spaces where I’m the happiest: "When Systems meet Strategy, and we could contribute as to How Engineers build & Use Technical Products".
         <br><br>
         Somewhere between all of that, I also developed a soft spot for technical storytelling (writing blogs/guides, breaking down system architecture, or explaining tricky concepts in a way that lands). 
         <br><br>
