--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
         My career so far has been a blend of managing innovative technology products and leading complex technical programs. And lately, my work has revolved around building developer-focused products (Developer Experience, Infrastructure, Platform Capabilities) and data platforms (Data Science, Engineering, Analytics).
         <br><br>
-        Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. These are also the Spaces where I’m the happiest: "When Systems meet Strategy, and we could contribute as to How Engineers build & Use Technical Products".
+        Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. And these are the spaces I’m the happiest, contributing to "How Engineers build, and use Technical Products". And I love to tinker with hands-on experiments and ideas, which keeps me alive in the open source community.
         <br><br>
-        Somewhere between all of that, I also developed a soft spot for technical storytelling (writing blogs/guides, breaking down system architecture, or explaining tricky concepts in a way that lands). 
+        Somewhere between all of that, I also developed a soft spot for technical storytelling. Sharing my own experiences and learnings through blogs on the latest technological advancements and technical how-to guides (breaking down complex system architecture, and explaining tricky concepts in a way that lands). 
         <br><br>
-        Outside of work, I write on Medium and tinker with ideas on GitHub (a mix of storytelling and hands-on experiments). Sharing what I learn has always been a natural part of how I grow.
+        Outside of work, I love to spend my time keeping myself fit (which lets me be my best version at work too). Since my school and college days, I have been an active athlete, won many medals and trophies and later even represented my state at national-level tournament two times. 
         <br><br>
         My philosophy is simple:
       </p>
