--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
       </p>
       
       <h3 style="font-size: 20px; color: var(--grey-label) !important; text-align: justify !important; font-style: italic; line-height: 1.3;">
-        “Turning technical chaos into clear, scalable products”, and “Helping brilliant teams ship things they’re genuinely proud of.”
+        “Turning technical chaos into clear, scalable products”, and “Helping teams ship things they’re genuinely proud of.”
       </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
         My career so far has been a blend of managing innovative technology products and leading complex technical programs. And lately, my work has revolved around building developer-focused products (Developer Experience, Infrastructure, Platform Capabilities) and data platforms (Data Science, Engineering, Analytics).
         <br><br>
-        Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. And these are the spaces I’m the happiest, contributing to "How Engineers build, and use Technical Products". And I love to tinker with hands-on experiments and ideas, which keeps me alive in the open source community.
+        Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. And these are the spaces I’m the happiest, contributing to "How Engineers build, and use Technical Products". Further, I love to tinker with hands-on experiments (on Github), keeping me alive in the open source community.
         <br><br>
         Somewhere between all of that, I also developed a soft spot for technical storytelling. Sharing my own experiences and learnings through blogs on the latest technological advancements and technical how-to guides (breaking down complex system architecture, and explaining tricky concepts in a way that lands). 
         <br><br>
