--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <br><br>
         Somewhere between all of that, I also developed a soft spot for technical storytelling. Sharing my own experiences and learnings through blogs on the latest technological advancements and technical how-to guides (breaking down complex system architecture, and explaining tricky concepts in a way that lands). 
         <br><br>
-        Outside of work, I love to spend my time keeping myself fit (which lets me be my best version at work too). Since my school, I have been an active athlete, won many medals, and later even represented my state at many national-level tournaments. 
+        Outside of work, I love to spend my time keeping myself fit. Since my school, I have been an active athlete, won many medals, and later even represented my state at several national-level tournaments. Even today, I make sure my each day I keep aside some time for my sports.
         <br><br>
         My philosophy is simple:
       </p>
