--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <br><br>
         Somewhere between all of that, I also developed a soft spot for technical storytelling. Sharing my own experiences and learnings through blogs on the latest technological advancements and technical how-to guides (breaking down complex system architecture, and explaining tricky concepts in a way that lands). 
         <br><br>
-        Outside of work, I love to spend my time aside for sports, aiming to keep myself fit. Since my school days, I have been an active athlete, won many medals, and later even represented my state at several national-level tournaments.
+        Outside of work, I love to keep myself active and fit. In fact, since my school days, I have been an athlete, won many medals, participated in marathons, and even represented my state twice at national-level tournament.
         <br><br>
         My philosophy is simple:
       </p>
