--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </h3>
       
       <p style="font-size: 16px; color: var(--text-lightgrey) !important; text-align: justify !important; line-height: 1.5;">    
-        My career so far has been a blend of managing innovative technology products and leading complex technical programs. And lately, my work has revolved around building developer-focused products (Developer Experience, Infrastructure, Platform Capabilities) and data platforms (Data Science, Engineering, Analytics).
+        My career so far has been a blend of managing innovative technology products and leading complex technical programs. And lately, my work has revolved around building developer-focused products (<a style="color: var(--grey-label) !important;">Developer Experience, Infrastructure, Platform Capabilities</a>) and data platforms (Data Science, Engineering, Analytics).
         <br><br>
         Along the way, I’ve collaborated closely with Platform/Data Engineering, System Architects, and DevOps teams. And these are the spaces I’m the happiest, contributing to "How Engineers build, and use Technical Products". Further, I love to tinker with hands-on experiments (<a href="https://github.com/PrineetKaur" target="_blank" style="color: var(--grey-label) !important;">on Github</a>), keeping me alive in the open source community.
         <br><br>
